<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  android:background="#9998b1"
  android:padding="5dp" >
  
  <RelativeLayout android:orientation="horizontal" 
		android:layout_width="fill_parent"
  		android:layout_height="fill_parent"
  		android:paddingTop="20dip" > 
  
	  	<TextView
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/about_version_name" 
			android:textStyle="bold"
			android:textColor="#000000"
			android:layout_alignParentLeft="true" />
	  	
	  	<TextView 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/about_version_value" 
			android:textStyle="bold"
			android:layout_gravity="center_vertical|right"
			android:textColor="#ffffff"
			android:layout_alignParentRight="true" />
  	</RelativeLayout>
	
	<RelativeLayout android:orientation="horizontal" 
		android:layout_width="fill_parent"
  		android:layout_height="fill_parent"
  		android:paddingTop="20dip" > 
  
	  	<TextView 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/about_developer_name" 
			android:textStyle="bold"
			android:textColor="#000000"
			android:layout_alignParentLeft="true" />
	  	
	  	<TextView
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/about_developer_value" 
			android:textStyle="bold"
			android:textColor="#ffffff"
			android:layout_alignParentRight="true" />
	</RelativeLayout>
  	
	<RelativeLayout android:orientation="horizontal" 
		android:layout_width="fill_parent"
  		android:layout_height="fill_parent"
  		android:paddingTop="20dip" > 
  
	  	<TextView 
	  	    android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/about_contact_name" 
			android:textStyle="bold"
			android:textColor="#000000"
			android:layout_alignParentLeft="true"  />
	  	
	  	<TextView
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/about_contact_value" 
			android:textStyle="bold"
			android:gravity="right"
			android:textColor="#ffffff"
			android:layout_alignParentRight="true" />
	</RelativeLayout>
		
	<LinearLayout android:orientation="horizontal" 
		android:layout_width="fill_parent"
  		android:layout_height="fill_parent"
  		android:paddingTop="25dip"
  		android:gravity="center_horizontal" > 
	
	    <Button android:id="@+id/buttonAboutCancel"
			android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@drawable/login_button_color"
            android:textStyle="bold"
            android:background="@drawable/login_button_bg"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
			android:text="@string/cancel" />
		
	</LinearLayout>
			
</LinearLayout>
