<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical"  
  android:padding="10dip">
  
   	<ImageView
        android:id="@+id/imageLoginlogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dip"
        android:layout_marginTop="40dip"
        android:contentDescription="@string/logo"
        android:src="@drawable/candado" />
    
	<TextView 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:text="@string/user" 
		android:textStyle="bold"
		android:textColor="#000000" />
		
	<EditText android:id="@+id/txtLoginUser"
	    android:inputType="textNoSuggestions"
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent" />
	
	<TextView
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:text="@string/password" 
		android:textStyle="bold"
		android:textColor="#000000" />
		
	<EditText android:id="@+id/txtLoginPassword"
		android:inputType="textPassword"
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent" />
				
	<LinearLayout 
	    android:orientation="horizontal"
    	android:gravity="center" 
		android:layout_width="fill_parent"
  		android:layout_height="fill_parent"
  		android:paddingTop="20dip" > 
		
	    <Button android:id="@+id/buttonLogin"
			android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@drawable/login_button_color"
            android:textStyle="bold"
            android:background="@drawable/login_button_bg"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
			android:text="@string/login" />
			
		<Button android:id="@+id/buttonNewAccount"
			android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@drawable/login_button_color"
            android:textStyle="bold"
            android:background="@drawable/login_button_bg"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
			android:text="@string/new_account" />
		
	</LinearLayout>
	
</LinearLayout>
